--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,11 +92,17 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Levels/TestLevel.TestLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Script/PacktUET.PacktUETGameModeBase
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
+
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -138,11 +144,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Mobile
-AppliedTargetedHardwareClass=Mobile
-DefaultGraphicsPerformance=Scalable
-AppliedDefaultGraphicsPerformance=Scalable
-
 
