--- a/PacktUET.uproject
+++ b/PacktUET.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "PacktUET",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"CoreUObject"
+			]
 		}
 	]
 }
